Added routermodule & user registration module barebones

--- a/matrimony-ui/angular.json
+++ b/matrimony-ui/angular.json
@@ -7,7 +7,7 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "matr",
       "schematics": {},
       "architect": {
         "build": {
