--- a/matrimony-ui/package.json
+++ b/matrimony-ui/package.json
@@ -6,8 +6,17 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "jest": "jest",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "precustome2e": "tsc --p e2e/tsconfig.json",
+    "custome2e": "protractor e2e/protractor.conf.js"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "./setupJest.ts"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -28,16 +37,20 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^7.2.1",
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^23.3.13",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^24.0.0",
+    "jest-preset-angular": "^6.0.2",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
@@ -46,6 +59,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.8.2"
   }
 }
