--- a/matrimony-ui/package.json
+++ b/matrimony-ui/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "tesseract.js": "^1.0.14",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
