--- a/matrimony-ui/package.json
+++ b/matrimony-ui/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@types/tesseract.js": "0.0.2",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "tesseract.js": "^1.0.14",
